--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -11,7 +11,7 @@ body {
         rgba(0, 0, 0, 0.1)
       ),
       /* url(https://images.pexels.com/photos/547114/pexels-photo-547114.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940); */
-      url(/assets/images/sea.jpg);
+      url(/Website/assets/images/sea.jpg);
     background-size: cover;
     height: 100vh;
     background-position:center;
