--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -16,7 +16,7 @@
     color:#fff;
     /* text-transform:uppercase; */
 }
-img{
+.social-media{
     height: 55px;
     width: 55px;
     border-radius:100%;
