--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -4,6 +4,10 @@
     margin:0 auto;
     border-radius:0%;
 }
+.background{
+    background-color:#3d4046;
+    color:white;
+}
 .linkedin{
     border-radius:100%;
     /* float:right; */
@@ -16,8 +20,9 @@
 }
 .bio{
     display:block;
-    position:relative;
-    top:-70px;
+    padding: 20px 0px;
+    /* position:relative;
+    top:0px; */
     font-family:arial;
     font-size: 10px;
     font-weight:600;
@@ -29,17 +34,32 @@
     /* font-weight:20; */
     /* position:relative;
     top:-40px; */
-    margin:10px 20px;
+    /* margin:10px 0; */
+    padding: 10px 10px;
     text-align:left;
     margin-bottom: 100px;
     display:block;
-    
+    /* background-color:#368cbf; */
+    width:80%;
+    margin: 0px auto;
+}
+/* .header{
+    background-color:#368cbf;
+    color:white;
+} */
+.wrapper {
+    border-left: 10px solid rgb(78, 138, 228);
+    background-color: #eeeeee;
+    padding-left: 10px;
+    margin: 20px 0px;
 }
 .body-text{
+     padding: 10px 10px;
      font-family:Georgia, 'Times New Roman', Times, serif; 
      font-size: 16px; 
      font-weight:20;
-    margin:10px 0;
+    /* margin:0 0; */
+    /* color:white; */
 }
 @media screen and (min-width: 600px){
     .linkedin{
@@ -48,3 +68,17 @@
         float:right;
     }
 }
+
+/* .border-button {
+    outline: solid 5px #9068be;
+    transition: outline 0.6s linear;
+    margin: 0.5em;
+    padding: 10px 10px;
+  }
+  
+  .border-button:hover { 
+      outline: solid 10px rgb(92, 92, 236);
+      
+    
+    } */
+  
