--- a/src/components/Projects/Display.css
+++ b/src/components/Projects/Display.css
@@ -1,6 +1,10 @@
 .card{
     margin: 20px auto;
-    width:400px;
-    height:200px;
-  
+    width:350px;
+    height:250px;
+
+}
+
+.link{
+    margin: 10px 0px;
 }
