--- a/src/components/Projects/Project.css
+++ b/src/components/Projects/Project.css
@@ -9,7 +9,7 @@ ul {
 
 .bg-color{
     /* text-align:center; */
-    background-color: rgb(25, 53, 116);
+    /* background-color: rgb(25, 53, 116); */
     /* overflow:visible */
     padding: 30px 20px;
     padding-bottom:70px;
